--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
         <h1 id="portfolioHeadline">Portfolio</h1>
         <div class = "projects">
             <button onclick="document.location='https://codepen.io/davidethomas321/pen/wvWRREr'" class = "cssCreature">
-                <img id="thumbTack" src="C:/ElevenFiftyProjects/PortfolioImages/unnamed.png">
+                <img id="thumbTack" src="./unnamed.png">
                 <h3 id = "description">CSS Creature</h3>
             <button onclick="document.location='https://davidethomas321.github.io/StaticLayout/'" class= "staticLayout">
-                <img id="thumbTack" src="C:/ElevenFiftyProjects/PortfolioImages/unnamed.png">
+                <img id="thumbTack" src="./unnamed.png">
                 <h3 id = "description">Static Layout</h3>
             <button onclick="document.location='https://davidethomas321.github.io/nytApi/'"class = "nytApi">
-                <img id="thumbTack" src="C:/ElevenFiftyProjects/PortfolioImages/unnamed.png">
+                <img id="thumbTack" src="./unnamed.png">
                 <h3 id = "description">NYT API</h3>
             <button onclick="document.location='https://davidethomas321.github.io/api-project/'"class = "sketchAndInspiration">
-                <img id="thumbTack" src="C:/ElevenFiftyProjects/PortfolioImages/unnamed.png">
+                <img id="thumbTack" src="./unnamed.png">
                 <h3 id = "description">Sketch Reference</h3>
         </div>
 
