--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <!-- <div class="profile1"> -->
                 
                 <div id="profile">
-                    <img id="profile" src="./Profile (2).jpg">
+                    <img id="profile" src="./DavidThomas_7.jpg">
                 </div>
                 <div class="buttons">
                     <button onclick="document.location='https://www.linkedin.com/in/david-thomas-6a637b1aa/'" id="linkedIn"></button>
