--- a/index.html
+++ b/index.html
@@ -89,13 +89,25 @@
                 <h3 id = "description">CSS Creature</h3>
             <button onclick="document.location='https://davidethomas321.github.io/StaticLayout/'" class= "staticLayout">
                 <img id="thumbTack" src="./unnamed.png">
-                <h3 id = "description">Static Layout</h3>
+                <h3 id = "description">Hulu Static Layout</h3>
             <button onclick="document.location='https://davidethomas321.github.io/nytApi/'"class = "nytApi">
                 <img id="thumbTack" src="./unnamed.png">
-                <h3 id = "description">NYT API</h3>
+                <h3 id = "description">NYT Article Search</h3>
             <button onclick="document.location='https://davidethomas321.github.io/api-project/'"class = "sketchAndInspiration">
                 <img id="thumbTack" src="./unnamed.png">
                 <h3 id = "description">Sketch Reference</h3>
+
+            <button onclick="document.location='https://davidethomas321.github.io/pokemonAPI/'"class = "pokemonAPI">
+                <img id="thumbTack" src="./unnamed.png">
+                <h3 id = "description">Pokemon Generator</h3>
+
+            <button onclick="document.location='https://davidethomas321.github.io/StaticLayout2/'"class = "kastStaticLayout">
+                <img id="thumbTack" src="./unnamed.png">
+                <h3 id = "description">Kast Static Layout</h3>
+
+            <button onclick="document.location='https://davidethomas321.github.io/NasaAPI/'"class = "nasaAPI">
+                <img id="thumbTack" src="./unnamed.png">
+                <h3 id = "description">Images from NASA</h3>
         </div>
 
 
@@ -149,3 +161,4 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
+
