--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <img id="thumbTack" src="./unnamed.png">
                 <h3 id = "description">Kast Static Layout</h3>
 
-            <button onclick="document.location='https://davidethomas321.github.io/NasaAPI/'"class = "nasaAPI">
+            <button onclick="document.location='https://nasa-api-project-ba1cd.web.app/'"class = "nasaAPI">
                 <img id="thumbTack" src="./unnamed.png">
                 <h3 id = "description">Images from NASA</h3>
         </div>
